# rs-passkey-auth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  prometheus.yml  sonar-project.properties
.github/workflows/: deploy.yml
migrations/: V1__Create_User_Table.sql  V2__Create_Webauthn_Table.sql
src/: lib.rs  main.rs
src/app/: error.rs  metrics.rs  mod.rs  rate.rs  router.rs  server.rs  state.rs  tracing.rs
src/auth/: dto.rs  handler.rs  mod.rs  model.rs  repo.rs  service.rs  traits.rs
src/auth/dto/: request.rs  response.rs
src/auth/repo/: user_repo.rs
src/config/: mod.rs  origin.rs  postgres.rs  redis.rs  webauthn.rs
src/utils/: cookie.rs  health.rs  jwt.rs  mod.rs
src/utils/jwt/: claims.rs  jwt.rs  mod.rs
tests/: lib.rs
tests/common/: constants.rs  fixture.rs  helper.rs  mock.rs  mod.rs
tests/unit/: service.rs
