[package]
name = "rs-passkey-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
tower = "0.5.2"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
webauthn-rs = "0.5.2"
async-trait = "0.1.89"
