[package]
name = "rs-passkey-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
tower = "0.5.2"
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
webauthn-rs = { version = "0.5.2", features = [
    "danger-allow-state-serialisation",
] }
async-trait = "0.1.89"
url = "2.5.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
tower-http = { version = "0.6.6", features = ["trace"] }
