[package]
name = "rs-passkey-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tokio-postgres = { version = "0.7.13", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
deadpool-postgres = "0.14.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
webauthn-rs = { version = "0.5.2", features = [
    "danger-allow-state-serialisation",
] }
url = "2.5.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
rusty_paseto = { version = "0.7.2", features = ["v4"] }
base64 = "0.22.1"
axum-extra = { version = "0.10.1", features = ["cookie"] }
time = { version = "0.3.41", features = ["macros"] }
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
ed25519-dalek = "2.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
